# FractalTerrainRendering

./: .gitignore  CMakeLists.txt  README.md
assets/: DetailMap.ppm  adesert_cracks_d.ppm  adesert_mntn2_d.ppm  adesert_mntn2o_d.ppm  adesert_mntn4_d.ppm  adesert_mntn4_n.ppm  adesert_mntn4_s.ppm  adesert_mntn4v_d.ppm  adesert_mntn_d.ppm  adesert_rocky_d.ppm  adesert_sand2_d.ppm  adesert_stone_d.ppm  adesert_stone_n.ppm  amntn_dark_d.ppm  convert_to_ppms.py  desert_cracks_d.ppm  desert_cracks_n.ppm  desert_cracks_s.ppm  desert_crackso_d.ppm  desert_cracksv_d.ppm  desert_cracksv_s.ppm  desert_mntn2_d.ppm  desert_mntn2_h.ppm  desert_mntn2_n.ppm  desert_mntn2_s.ppm  desert_mntn_d.ppm  desert_mntn_h.ppm  desert_mntn_n.ppm  desert_mntn_s.ppm  desert_mud_d.ppm  desert_mud_s.ppm  desert_rocky_d.ppm  desert_rocky_n.ppm  desert_sand2_d.ppm  desert_sand2_n.ppm  desert_sand2_s.ppm  desert_sand_big_d.ppm  desert_sand_big_n.ppm  desert_sand_big_s.ppm  desert_sand_bigx_d.ppm  (+151 more)
cmake/: FindSDL2.cmake
include/: DefaultOBJReaderFunctors.h  Lights.h  OBJFileReader.hpp  OpenGLDefs.h  SDLGraphicsProgram.h  SimpleCamera.h  SimpleModel.hpp  Terrain.h  TerrainPatch.h  Texture.h  Utilities.h
include/glad/: glad.h
shaders/: Geometry.glsl  TessControl.glsl  TessEval.glsl  fragment.glsl  vertex.glsl
src/: Lights.cpp  SDLGraphicsProgram.cpp  SimpleCamera.cpp  Terrain.cpp  TerrainPatch.cpp  Texture.cpp  Utilities.cpp  glad.c  main.cpp
